fix: updated the min height for home-team-section on mobile

--- a/style.css
+++ b/style.css
@@ -4664,7 +4664,7 @@ span.wpcf7-not-valid-tip {
     }
 
     .home-team-section {
-        min-height: 650px;
+        min-height: 799px;
         background-position: top center;
     }
 
